--- a/toDoApp.css
+++ b/toDoApp.css
@@ -35,6 +35,40 @@ body {
     font-size: 20px;
 }
 
+#radioButton {
+    margin-top: 10px;
+    width: 360px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+label {
+    font-size: 16px;
+    text-transform: uppercase;
+    font-family: calibri;
+}
+
+input[type="radio"] {
+    /* width: 18px;
+    height: 18px;
+    box-shadow: inset 0 0 2px 1px #333, 0 0 2px 1px #333;
+    border-radius: 50%;
+    color: #29bcf1; */
+
+    /* appearance: none; */
+    background-color: #fff;
+    margin: 0;
+    color: #29bcf1;
+    font: inherit;
+    color: #777;
+    width: 1.15em;
+    height: 1.15em;
+    border: 0.15em solid #555;
+    border-radius: 50%;
+    transform: translateY(-0.075em);
+}
+
 #btn {
     padding: 10px 25px;
     border: 3px solid #29bcf1;
@@ -59,7 +93,7 @@ body {
     justify-content: center;
     align-items: center;
     box-shadow: 0 0 14px 1px #444, 0 0 14px 1px #444;
-    /* display: none; */
+    opacity: 0;
 }
 
 .class_list {
