--- a/fontFamilyPicker.css
+++ b/fontFamilyPicker.css
@@ -6,38 +6,43 @@
 
 body {
     width: 100%;
-    height: 720px;
-    background: #159fd2;
+    min-height: 720px;
+    /* background: #159fd2; */
+    background: #999;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 #container {
+    position: relative;
     width: 1000px;
-    height: 600px;
+    min-height: 600px;
     border: 4px solid #1289b4;
+    background: #159fd2;
     box-shadow: 0 0 30px 1px #333, 0 0 30px 1px #333;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
+    padding: 20px 0;
 }
 
 #area {
-    margin-top: 50px;
+    margin-top: 30px;
     width: 90%;
-    height: 150px;
+    height: 200px;
     border: 3px solid #29bcf1;
     outline: none;
     box-shadow: 0 0 14px 1px #666, 0 0 14px 1px #666;
     padding: 20px;
     font-size: 20px;
+    font-family: calibri;
 }
 
 #radioButton {
     margin-top: 10px;
-    width: 360px;
+    width: 700px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -50,15 +55,9 @@ label {
 }
 
 input[type="radio"] {
-    /* width: 18px;
-    height: 18px;
-    box-shadow: inset 0 0 2px 1px #333, 0 0 2px 1px #333;
-    border-radius: 50%;
-    color: #29bcf1; */
-
     /* appearance: none; */
     background-color: #fff;
-    margin: 0;
+    margin: 10px;
     color: #29bcf1;
     font: inherit;
     color: #777;
@@ -84,19 +83,34 @@ input[type="radio"] {
     background: #29bcf1;
 }
 
+#font-size {
+    width: 80%;
+}
+
 #output {
     margin-top: 50px;
     width: 90%;
-    height: 230px;
+    min-height: 80px;
     border: 4px solid #2fc6fd;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0 0 14px 1px #444, 0 0 14px 1px #444;
     opacity: 0;
+    padding:  20px 40px;
 }
 
 .class_list {
     font-family: calibri;
     color: #333;
+    text-align: center;
+    vertical-align: middle;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+h2.class_list {
+    padding: 20px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
