--- a/fontFamilyPicker.css
+++ b/fontFamilyPicker.css
@@ -14,6 +14,15 @@ body {
     align-items: flex-start;
 }
 
+span {
+    position: absolute;
+    left: 7%;
+    text-transform: uppercase;
+    font-family: calibri;
+    font-weight: bold;
+    font-size: 18px;
+}
+
 #container {
     position: relative;
     width: 1000px;
@@ -42,16 +51,20 @@ body {
 
 #radioButton {
     margin-top: 10px;
-    width: 700px;
+    max-width: 700px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 label {
-    font-size: 16px;
+    font-size: 15px;
+    font-weight: bold;
     text-transform: uppercase;
     font-family: calibri;
+    color:#fff;
+    text-shadow: 0 0 2px #333;
 }
 
 input[type="radio"] {
@@ -110,7 +123,50 @@ input[type="radio"] {
 }
 
 h2.class_list {
-    padding: 20px;
+    padding-top: 20px;
     margin-top: auto;
     margin-bottom: auto;
+}
+
+@media screen and (max-width:1050px){
+    #container {
+        width: 95%;
+    }
+}
+
+@media screen and (max-width:700px){
+    #radioButton {
+        flex-wrap: wrap;
+        width: 300px;
+    }
+
+    #font-size {
+        width: 90%;
+    }
+}
+
+
+@media screen and (max-width:500px) {
+
+    #container {
+        width: 100%;
+    }
+    #area {
+        width: 100%;
+    }
+    #radioButton {
+        margin-top: 20px;
+    }
+    #output {
+        width: 100%;
+        padding: 10px 5px;
+    }
+    span {
+        font-size: 15px;
+        left: 3%;
+    }
+    h2.class_list {
+        padding: 20px;
+        padding-top: 40px;
+    }
 }
